<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:orientation="vertical"
    tools:context=".home.MainActivity">

    <TextView
        android:id="@+id/tv_is_connected"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/not_connected"
        android:gravity="center"
        android:textSize="42sp"/>

    <TextView
        android:id="@+id/tv_is_scanning"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="28sp"
        android:gravity="top|center" />

    <Button
        android:id="@+id/btn_connect"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:textSize="32sp"
        android:text="@string/connect" />

    <Button
        android:id="@+id/btn_sessions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:textSize="32sp"
        android:text="@string/sessions"/>

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:textSize="32sp"
        android:text="@string/start_scan"/>

    <Button
        android:id="@+id/btn_MaP"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:textSize="32sp"
        android:text="@string/map"/>

</LinearLayout>


