<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".map.MapModeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_map_mode"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/map_mode"
            android:gravity="center"
            android:textSize="42sp"/>

        <Button
            android:id="@+id/btn_end_map"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_margin="8dp"
            android:textAllCaps="false"
            android:text="@string/end_map_mode"
            android:textSize="32sp"/>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_new_joins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp">

            <TextView
                android:id="@+id/tv_new_joins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/new_joins"
                android:gravity="center"
                android:textSize="28sp"/>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/rv_layout_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_new_joins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        </LinearLayout>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_all_joins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="15dp">

            <TextView
                android:id="@+id/tv_all_joins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/all_joins"
                android:gravity="center"
                android:textSize="28sp"/>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/rv_layout_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_all_joins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>