<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="vertical"
    app:cardCornerRadius="4dp"
    app:contentPadding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_person_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Navin Viswan" />

        <TextView
            android:id="@+id/tv_label_last_hit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@+id/tv_last_hit"
            android:text="@string/last_hit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_person_name" />

        <TextView
            android:id="@+id/tv_last_hit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_last_hit"
            app:layout_constraintStart_toEndOf="@+id/tv_label_last_hit"
            tools:text="10:56 AM" />

        <TextView
            android:id="@+id/tv_label_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@+id/tv_distance"
            android:text="@string/distance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_last_hit" />

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_distance"
            app:layout_constraintStart_toEndOf="@+id/tv_label_distance"
            tools:text="~ 1.5 m" />

        <TextView
            android:id="@+id/tv_label_confidence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/confidence"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_distance" />

        <TextView
            android:id="@+id/tv_confidence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_confidence"
            app:layout_constraintStart_toEndOf="@+id/tv_label_confidence"
            tools:text="87%" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="tv_confidence,tv_label_confidence,tv_distance,tv_label_distance,tv_last_hit,tv_label_last_hit"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_mac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textStyle="italic"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_person_name"
            app:layout_constraintStart_toEndOf="@+id/tv_person_name"
            tools:text="(12:34:45:67:ab:cd)" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
